--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,17 @@
-name: Your New Jekyll Site
-markdown: redcarpet
+markdown: enhanced_kramdown
 pygments: true
+lsi: false
+safe: false
+baseurl: /
+permalink: /:title
+
+kramdown:
+  use_coderay: false
+
+# Site globals used throughout docs.
+project: Project FiFo
+version: 0.4.3
+github: project-fifo/docs
+google_group: ""
+ga_tracking_id: 
+
