--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 markdown: redcarpet
 pygments: true
+exclude: ["CNAME"]
 
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
